# yams-robot-server

./: .can-signatures.json  .gitignore  .gitmodules  AGENTS.md  BI_YAMS_LEADER_FIX.md  README.md  _t5_cache.py  carton-box-dataset-overview.md  copy-and-paste-commands.md  cosmos_debugging.md  cosmos_worker.old.py  cosmos_worker.py  error.txt  lerobot_discovery.py  lerobot_record_yams.py  lerobot_setup_motors_yams.py  lerobot_teleoperate_yams.py  log.txt  mimic_adapter.py  pyproject.toml  record.sh  replay.sh  run_eval.py  run_record.py  setup problems.md  teleop.prof  teleop.py  teleop.sh  teleoperate.sh  test_bi_yams_discovery.py  test_discovery.py  yam_policy.py
.claude/: settings.local.json
configs/: arms.yaml  realsense.json  trajectories.yaml
data/ETHRC/yams-closed-carton-box-to-migros-basket-go2/data/chunk-000/: file-000.parquet  file-001.parquet  file-002.parquet
data/ETHRC/yams-closed-carton-box-to-migros-basket-go2/meta/: info.json  stats.json  tasks.parquet
data/ETHRC/yams-closed-carton-box-to-migros-basket-go2/meta/episodes/chunk-000/: file-000.parquet  file-001.parquet  file-002.parquet
dataset_statistics/: bridge.json
docs/: leader-permissiond.md
examples/: bi_leader_follower.py  compute_offsets.py  debug_leader_follower.py  leader_follower.py  read_bi_follower.py  read_bi_leader.py  read_follower.py  read_leader.py  vis.py
scripts/: act_local.py  align_topdown.py  align_topdown_visual.py  arm_status.py  cache_embedding_from_zarr.py  check_cams.sh  check_depth.py  check_setup.py  compute_offsets.py  dataset-viz.sh  find_camera.py  fuse_video_ckpt.py  grab_topdown_frame.py  inference.sh  open_data.py  policy_replay.py  precompute_prompt.py  record-on-demand.sh  record-profile.sh  record.py  record.sh  record_ui.sh  record_with_depth.py  replay.sh  replay_uploaded_trajectory.py  run_history_to_lerobot.py  save_topdown_reference.py  set_camera_profile.sh  setup_leader_ports.py  standalone_video_gen.py  teleop.sh  teleop_control.py  teleop_ui.sh  test_cam.py  test_keyboard_input.py  upload_lerobot_dataset.py  upload_trajectories.py  watch_pose.py
scripts/dataset/: edit_dataset.sh  trim_before_j2_lift.py
sim-rl/checkpoints/: ckpt_000500.pt  ckpt_001000.pt  ckpt_001500.pt  ckpt_002000.pt  ckpt_002500.pt  ckpt_003000.pt  ckpt_003500.pt  ckpt_004000.pt  ckpt_004500.pt  ckpt_005000.pt  ckpt_final.pt  ckpt_interrupted_000092.pt
sim-rl/envs/: cube_grasp_env.py
sim-rl/models/: dual_yam.xml  networks.py
sim-rl/results/: summary.txt
sim-rl/testing/: config.yaml  eval_policy.py
sim-rl/training/: config.yaml  test_dual_yam.py  train_cube_grasp.py
src/lerobot_camera_cached/: __init__.py  cached_config.py  camera_opencv_cached.py  camera_realsense_cached.py  depth_sidecar.py  pyproject.toml  realsense_cached_config.py
src/lerobot_camera_zed/: __init__.py  pyproject.toml  zed_camera.py  zed_config.py
src/lerobot_opencv_cached/: cached_config.py  camera_opencv_cached.py
src/lerobot_robot_yams/: __init__.py  bi_follower.py  follower.py  forward_kinematics.py  pyproject.toml
src/lerobot_robot_yams/calibration/: follower_effort_left.yaml  follower_effort_right.yaml
src/lerobot_robot_yams/robot_core/: yams_server.py
src/lerobot_robot_yams/utils/: utils.py
src/lerobot_teleoperator_gello/: __init__.py  bi_leader.py  leader.py  pyproject.toml  setup_motors_yams.py
src/lerobot_teleoperator_gello/calibration/: leader_calibration_left.yaml  leader_calibration_right.yaml
src/lerobot_teleoperator_gello/calibration_baraq_old/: leader_calibration_right.yaml
src/lerobot_teleoperator_gello/calibration_old/: leader_calibration_left.yaml  leader_calibration_right.yaml
src/plotting/: __init__.py  live_joint_plot.py
src/plotting/web/: app.js  index.html  styles.css
src/utils/: camera_auto_exposure.py  camera_memo.py  camera_pose.py  connection.py  ethrc_teleoperate.py  gripper_feedback.py  lerobot_record_wrapper.py  lifecycle.py  live_joint_plot.py  move_arms_zero.py  patched_record.py  teleop_data.py  teleop_setup.py  terminal_status.py  time_each_line.py
src/yams_robot_server/: bi_follower.py  bi_leader.py  follower.py  leader.py
src/yams_robot_server/calibration/: leader_calibration_right.yaml
src/yams_robot_server/camera/: __init__.py  opencv.py  zed_camera.py  zed_config.py
src/yams_robot_server/scripts/: record.py
src/yams_robot_server/utils/: utils.py
test_trajectories/: trajectory_just_grippers.jsonl  trajectory_test_arms.jsonl
tests/: read_trigger_positions.py  test_bi_follower_hot_path.py  test_camera_auto_exposure.py  test_camera_opencv_cached.py  test_camera_pose.py  test_camera_realsense_cached.py  test_lerobot_record_wrapper.py  test_realsense_profile_load.py  test_teleop_action_contract.py  test_watch_pose.py
urdf/: dual_yam.urdf  dual_yam_generated.urdf  generate_dual_urdf.py  visualize_robot.py  yam_st_urdf_with_linear_gripper.urdf
urdf/assets/: tip.stl
