[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yams-robot-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "opencv-python",
    "dynamixel-sdk>=3.8.4",
    "lerobot==0.4.0",
    "i2rt",
    "ipykernel>=7.1.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
i2rt = { path = "third_party/i2rt", editable = true }
pyzed = { url = "https://download.stereolabs.com/zedsdk/5.1/whl/linux_x86_64/pyzed-5.1-cp310-cp310-linux_x86_64.whl" }

[project.optional-dependencies]
zed = [
    "pyzed",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_robot_yams", "src/lerobot_teleoperator_gello", "src/lerobot_camera_zed"]

[tool.black]
line-length = 100
target-version = ['py310']
