[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yams-robot-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "opencv-python",
    "dynamixel-sdk>=3.8.4",
    "lerobot==0.5.0",
    "i2rt",
    "ipykernel>=7.1.0",
    "pyyaml>=6.0",
    "lerobot_robot_yams",
    "lerobot_teleoperator_gello",
    "lerobot_camera_zed",
    "lerobot_camera_cached",
    "pyrealsense2>=2.57.7.10387",
    "torch==2.7.1",
    "torchvision==0.22.1"
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
i2rt = { path = "third_party/i2rt", editable = true }
lerobot_robot_yams = { path = "src/lerobot_robot_yams", editable = true }
lerobot_teleoperator_gello = { path = "src/lerobot_teleoperator_gello", editable = true }
lerobot_camera_zed = { path = "src/lerobot_camera_zed", editable = true }
lerobot_camera_cached = { path = "src/lerobot_camera_cached", editable = true }
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_robot_yams", "src/lerobot_teleoperator_gello", "src/lerobot_camera_zed",
            "src/lerobot_camera_cached"]

[tool.black]
line-length = 100
target-version = ['py312']

[dependency-groups]
dev = [
    "snakeviz>=2.2.2",
]
