[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lerobot_camera_zed"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "lerobot==0.5.0",
    "opencv-python",
    "pyzed",
]

[tool.uv.sources]
pyzed = { url = "https://download.stereolabs.com/zedsdk/5.1/whl/linux_x86_64/pyzed-5.1-cp312-cp312-linux_x86_64.whl" }

[tool.hatch.build.targets.wheel]
packages = ["."]
